2000-11-20  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/pm3d.c: bugfix crash when plotting surface with 1 scan only

	* src/mouse.c: disable changing 3D view and scale during 'set pm3d map'

2000-11-15  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/graphics.c (map_position_double): added back a missing 'break'.

2000-11-15  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/command.c (help_command): [_Windows] fixed off-by-one error
 	in help topic determination.

2000-11-15  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/color.h src/getcolor.c src/color.c src/show.c term/post.trm:
	  pm3d --- move PostScriptColorFormulae from post.trm to getcolor.c and
	  rename them to ps_math_color_formulae

	* src/getcolor.h: pm3d --- new file, declarations for getcolor.c

	* term/epslatex.trm: pm3d --- removed pm3d code from epslatex.trm which
	  duplicated the code in post.trm, and call the particular ps.trm 
	  functions instead

2000-11-14  Petr Mikulik  <mikulik@physics.muni.cz>

	* make the branched version compile under OS/2

2000-11-12  James R. Van Zandt  <jrv@vanzandt.mv.com>

	* term/README: describe pm3d and mouse API

	* term/cgm.trm: add pm3d support.

2000-11-10  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/gnuplot.opt: added new sourcefiles to the list.

	* config/makefile.nt: adapted to 3.8 source layout, pm3d enabled.

2000-11-09  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/color.c, src/pm3d.c: allow pm3d compile without pslatex

2000-11-08  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/hidden3d.c (split_line_at_ratio): Changed parameters.
	(draw_edge): Changed parameters.
	(handle_edge_fragment): Changed parameters. Avoid checking same
 	polygon against the recursing edge again. Don't allocate fresh
 	edge.
	(in_front): Changed parameters. Don't modify contents of 'edge'
 	passed in. Rather pass around vertex data separately. Revised some